--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ openpyxl = "^3.0.7"
 SQLAlchemy = "^1.4.3"
 python-decouple = "^3.4"
 psycopg2 = "^2.8.6"
+seaborn = "^0.11.1"
 
 [tool.poetry.dev-dependencies]
 
